# ChillPatcher

./: .gitignore  .gitmodules  1.py  AGENTS.md  ChillPatcher.csproj  ChillPatcher.sln  OmniMixIntegration.cs  PluginConfig.cs  README.md  README_ZH.md  build.cmd  build_fh6_omni_bridge_assets.bat  build_player.bat  build_release.bat  nuget.config
.github/workflows/: build.yml  codepress-review.yml  release.yml
ChillPatcher.MediaGenerator/: AI_HANDOFF_SWATCHBIN.md  AnthemHandler.cs  BankGenerator.cs  ChillPatcher.MediaGenerator.csproj  Config.cs  Options.cs  Program.cs  RadioInfoModifier.cs  SwatchBinBuilder.cs  config.json
ChillPatcher.Module.Netease/: ChillPatcher.Module.Netease.csproj  NeteaseAccountApi.cs  NeteaseBridge.cs  NeteaseFileCache.cs  NeteaseMediaTagger.cs  NeteaseModule.cs  NeteaseSessionManager.cs
ChillPatcher.SDK/: ChillPatcher.SDK.csproj
ChillPatcher.SDK/Events/: ModuleEvents.cs
ChillPatcher.SDK/Interfaces/: IPlaybackBridge.cs  IStreamingService.cs
ChillPatcher.SDK/Ipc/: OmniMixPlayerClient.cs  SharedMemoryReader.cs
ForzaRadioBridge/: README.md  build.bat  probe-experiment-log.md  version_proxy.cpp
JSApi/: ChillAudioApi.cs  ChillEventApi.cs  ChillModuleApi.cs  ChillPlaylistApi.cs
ModuleSystem/Services/Streaming/: CorePcmStreamReader.cs  CoreStreamingService.cs
Native/: SmtcBridge.cs
NativePlugins/EsbuildBridge/: build.bat
NativePlugins/ForzaHorizon6OmniBridge/: CMakeLists.txt  README.md  build.bat
NativePlugins/ForzaHorizon6OmniBridge/include/fh6/sources/: omni_pcm_source.hpp
NativePlugins/ForzaHorizon6OmniBridge/src/sources/: omni_pcm_source.cpp
NativePlugins/OmniAudioDecoder/: Cargo.toml  build.bat
NativePlugins/OmniAudioDecoder/include/: omni_audio_decoder.h
NativePlugins/OmniAudioDecoder/src/: lib.rs
NativePlugins/OmniPcmShared/: CMakeLists.txt  LICENSE  OmniPcmClient.Interop.cs  OmniPcmShared.Interop.cs  README.md  build.bat
NativePlugins/OmniPcmShared/include/: omni_pcm_shared.h
NativePlugins/OmniPcmShared/src/: omni_pcm_control.cpp  omni_pcm_shared.cpp
NativePlugins/SmtcBridge/: build.bat
NativePlugins/SmtcBridge/include/: smtc_bridge.h
NativePlugins/SmtcBridge/src/: smtc_bridge.cpp
NativePlugins/SpotifyLibrespotBridge/: Cargo.toml  build.bat
NativePlugins/SpotifyLibrespotBridge/src/: lib.rs
NativePlugins/netease_bridge/: ChillNetease.h  build.bat
NativePlugins/qqmusic_bridge/: build.bat
NativePlugins/qqmusic_bridge/api/: user.go
OmniMixPlayer/: OmniMixPlayer.sln
OmniMixPlayer/OmniMixPlayer.Backend/: OmniMixPlayer.Backend.csproj  Program.cs  appsettings.json
OmniMixPlayer/OmniMixPlayer.Backend/Audio/: DbService.cs  DecoderEngine.cs  Equalizer.cs  InstanceCapabilityPolicy.cs  InstanceProfileStore.cs  InstanceRegistry.cs  LibraryStorage.cs  NullPcmReader.cs  PlaybackController.cs  PlaybackInstanceManager.cs  PlaybackModels.cs  PlaybackSession.cs  PlaybackSessionManager.cs  PlaybackTimelineReducer.cs  PlaybackTimelineStore.cs  PlaylistSourceModels.cs  QueueSlot.cs  SharedMemoryServer.cs  VolumeNode.cs
OmniMixPlayer/OmniMixPlayer.Backend/Http/: ApiJsonContext.cs  ApiServer.cs  EventBridge.cs  GlobalConfigManager.cs  ModuleUIHandler.cs
OmniMixPlayer/OmniMixPlayer.Backend/ModuleSystem/: EventBus.cs  ModuleConfigManager.cs  ModuleContext.cs  ModuleLoader.cs
OmniMixPlayer/OmniMixPlayer.Backend/Services/: InstanceServiceImpl.cs  LibraryServiceImpl.cs  PlaybackServiceImpl.cs
OmniMixPlayer/OmniMixPlayer.Backend/Storage/: StorageVersion.cs
OmniMixPlayer/OmniMixPlayer.SDK/: OmniMixPlayer.SDK.csproj  README.md  SDKInfo.cs
OmniMixPlayer/OmniMixPlayer.SDK/Attributes/: MusicModuleAttribute.cs
OmniMixPlayer/OmniMixPlayer.SDK/Events/: ModuleEvents.cs
OmniMixPlayer/OmniMixPlayer.SDK/Interfaces/: ICoreServices.cs  ICustomJSApi.cs  IDependencyLoader.cs  IEventBus.cs  ILibraryRegistry.cs  IModuleConfigManager.cs  IModuleContext.cs  IModuleUIProvider.cs  IMusicModule.cs  IPlayQueue.cs  IProviders.cs  IRegistry.cs  IStreamingProvider.cs  IStreamingService.cs
OmniMixPlayer/OmniMixPlayer.SDK/Ipc/: SharedMemoryProtocol.cs
OmniMixPlayer/gui_flutter/: README.md  pubspec.yaml
OmniMixPlayer/gui_vbnet/: Attribution.md  OmniMixFrontend.sln
Patches/: SystemMediaTransport_Patches.cs
Patches/UIFramework/: AudioPlayer_Update_Patch.cs  FacilityMusic_UpdateFacility_Patch.cs  MusicPlayListButtons_Patch.cs  MusicPlayListButtons_Patches.cs  MusicService_Excluded_Patch.cs  MusicService_Favorite_Patch.cs  MusicService_GetProgress_Patch.cs  MusicService_Load_Patch.cs  MusicService_Patches.cs  MusicService_PlaylistOrder_Patch.cs  MusicService_SetProgress_Patch.cs  MusicTagListUI_Patches.cs  MusicTagListUI_SetTitle_Patch.cs  MusicUI_AlbumArt_Patch.cs  MusicUI_Patches.cs  PlayQueuePatch.cs
UIFramework/Audio/: StreamingAudioLoader.cs  SystemAudioMonitor.cs  SystemMediaTransportService.cs
UIFramework/Music/: PlaylistListBuilder.cs  UIObjectPool.cs
docs/: OmniMixPlayer部署方案.md  重构计划.md
mods/ForzaHorizon6OmniBridge/: CMakeLists.txt  build.bat
netease_bridge/: main.go
scripts/: build_all.py  build_config.py  build_gui.py  build_installer.cmd  build_installer.ps1  build_runner.py  build_tree.py  ci_build.py
scripts/installer/: OmniMixPlayer.iss
scripts/tasks/: base.py  common.py  fh6.py  installer.py  mod.py  native.py  player.py  unified.py
(+429 files in other folders)
